@@ -1,4 +1,6 @@
 0.7.8
+- Logging mseconds option
+- Not able to view Graphical History Chart on Windows #57 
 - Bugs fixes
 
 0.7.7 / September 5, 2015
