@@ -1,5 +1,7 @@
 0.5.5
 [Alexandr Topilski]
+- Logging mseconds option
+- Not able to view Graphical History Chart on Windows #5
 - UnQLite database support http://unqlite.org/
 - Lmdb database support http://symas.com/mdb/
 - Bugs fixes
